# JotaiToKetaiTransformer

JotaiToKeitaiTransformer/: pyproject.toml
JotaiToKeitaiTransformer/jotaitokeitaitransformer/: notebook.ipynb
JotaiToKeitaiTransformer/tests/: test_jotaitokeitaitransformer.py
