[tool.poetry]
name = "JotaiToKeitaiTransformer"
version = "0.1.0"
description = ""
authors = ["Kentaro Kato <ken.k.jul2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, !=3.9.7"
jupyterlab = "^4.0.9"
streamlit = "^1.29.0"
openai = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
